--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 # requirements.txt
-fastapi
-uvicorn
-sqlalchemy
+fastapi~=0.115.12
+uvicorn~=0.34.0
+sqlalchemy~=2.0.40
 psycopg2-binary
 alembic
-pydantic
+pydantic~=2.11.3
 prometheus-client
 python-multipart
-docker
+docker~=7.1.0
+pytest
+docker >= 6.0.0
+prometheus_client~=0.21.1
