fixed the docker issue, py and js images building properly now, the initial netowrk bridge issues was solved by simply rebooting my laptop lol

--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,13 +1,11 @@
-# docker/python/Dockerfile
 FROM python:3.9-slim
 
 WORKDIR /app
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
 
-# Set up a non-root user for better security
-RUN useradd -m appuser
-USER appuser
+# Don't try to copy function.py at build time
+# Just copy requirements.txt if it exists
+COPY requirements.txt* .
+RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
 
-COPY function.py /app/
+# The actual function.py will be mounted at runtime
 CMD ["python", "function.py"]
