fixed a lot of docker issues, can now run every container using 4 commands at max. still need to integrate grafana and other random tweaks

--- a/.env.project
+++ b/.env.project
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://serverless:password@localhost:5432/serverless_db
+DATABASE_URL=postgresql://postgres:postgres@db:5432/serverless_functions
 DOCKER_IMAGE_PYTHON=python-executor:latest
 DOCKER_IMAGE_JS=node-executor:latest
 PROMETHEUS_METRICS_PATH=/metrics
