--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -2,10 +2,9 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-# Don't try to copy function.py at build time
-# Just copy requirements.txt if it exists
+# Copy requirements.txt if it exists and install dependencies
 COPY requirements.txt* .
 RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
 
-# The actual function.py will be mounted at runtime
-CMD ["python", "function.py"]
+# Ensure the container gracefully handles the absence of function.py
+CMD ["sh", "-c", "if [ -f function.py ]; then python function.py; else echo 'Error: function.py not found'; exit 1; fi"]
